New: -1. Added functionality to the Quiz page -2. Added Profile Page -3. Added Leaderboard Page -4. Added Time based Quiz

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^5.2.1
   supabase_flutter: ^2.8.1
+  http: ^1.1.0
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
